<resources>
    <string name="app_name">IniDesakuBeta</string>
    <string name="donasi">Donasi</string>
    <string name="judul_donasi">Judul Donasi</string>
    <string name="progres_donasi">Progres Donasi</string>
    <string name="total_hari">/20 hari</string>
    <string name="terkumpul">Terkumpul</string>
    <string name="uang_terkumpul">1.000.000</string>
    <string name="uang_target">4.000.000</string>
    <string name="tentang_program">Tentang Program</string>
    <string name="pelatihan_cover">Pelatihan Cover</string>
    <string name="judul_kegiatan">Judul Kegiatan</string>
    <string name="tempat">Balai Desa</string>
    <string name="waktu">09 Agustus 2023, 08.00 WIB</string>
    <string name="persyaratan">Persyaratan</string>
    <string name="rincian_pelayanan">Rincian Pelayanan</string>
    <string name="manfaat_pelayanan">Manfaat Pelayanan</string>
    <string name="target">Target</string>
    <string name="nama_produk">Soto Betawi</string>
    <string name="rincian_produk">Deskripsi Produk</string>
    <string name="penilaian_produk">4.5</string>
    <string name="produk_unggulan">Produk\nUnggulan</string>
    <string name="admin">Admin Desa</string>
    <string name="judul_produk_unggulan">Judul Produk Unggulan</string>
    <string name="ingin_memesan_hubungi">Ingin memesan? hubungi</string>
    <string name="beli">Beli</string>
    <string name="telepon">Telepon</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_onboarding_1">Ini Desaku 1</string>
    <string name="title_onboarding_2">Ini Desaku 2</string>
    <string name="title_onboarding_3">Ini Desaku 3</string>
    <string name="description_onboarding_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eu dapibus sem, at viverra massa. Nam vitae quam vel ipsum sodales faucibus quis nec mauris</string>
    <string name="description_onboarding_2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eu dapibus sem, at viverra massa. Nam vitae quam vel ipsum sodales faucibus quis nec mauris</string>
    <string name="description_onboarding_3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eu dapibus sem, at viverra massa. Nam vitae quam vel ipsum sodales faucibus quis nec mauris</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce aliquam efficitur euismod. Vivamus scelerisque et urna scelerisque volutpat. Mauris volutpat varius eros, et condimentum leo varius et. Maecenas tincidunt ligula metus, porttitor condimentum neque interdum at. Morbi est nisi, pulvinar vel rutrum quis, dignissim nec libero. Suspendisse eget hendrerit orci. Pellentesque et vestibulum ex. Donec posuere lorem diam, volutpat imperdiet urna ornare nec. Nunc at tellus eros.
        Duis viverra ornare rutrum. Suspendisse sagittis, sem sed sagittis pretium, odio ante tempor dui, vel porta mauris leo non libero. Praesent aliquam maximus sem nec auctor. Morbi eget euismod ante, non dapibus diam. Nullam posuere consequat orci, et eleifend neque tempus vitae. Curabitur vitae congue lacus, a consequat mi. Suspendisse sapien diam, faucibus eget condimentum et, porta a felis.
        Phasellus sem risus, faucibus sed tellus ac, iaculis aliquet velit. Suspendisse potenti. Vivamus tincidunt ipsum vitae turpis tristique auctor. Pellentesque bibendum vestibulum nulla at finibus. Pellentesque euismod mauris felis, vitae molestie neque sollicitudin et. Sed at urna vulputate, faucibus augue id, malesuada felis. Donec sed pulvinar diam. Sed ante felis, ultrices vel posuere tristique, convallis sit amet urna. Pellentesque non accumsan lectus, vitae placerat metus.
    </string>
    <string name="testing">asdfasdf</string>
    <string name="email">Email</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="ingat_saya">Ingat saya</string>
    <string name="lupa_kata_sandi">Lupa kata sandi?</string>
    <string name="masuk">Masuk</string>
    <string name="atau">Atau</string>
    <string name="pendaftaran_akun">Pendaftaran Akun</string>
    <string name="username">Username</string>
    <string name="sudah_mempunya_akun">Sudah mempunya akun?</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="pilih_wilayah_anda">Pilih Wilayah Anda</string>
    <string name="province">Provinsi</string>
    <string name="kota_kabupaten">Kota / Kabupaten</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="desa_kelurahan">Desa / Kelurahan</string>
    <string name="done">Selesai</string>
    <string name="back">Kembali</string>
    <string name="input_number_telphone">Nomor telepon</string>
    <string name="confirm_password">Konfirmasi kata sandi</string>
    <string name="profile_desa">Profile Desa</string>
    <string name="geospasial">Geospasial</string>
    <string name="beranda">Beranda</string>
    <string name="profile">Profile</string>
    <string name="ppob">PPOB</string>
    <string name="saldo_anda">Saldo Anda</string>
    <string name="saldo">Rp. 120.000</string>
    <string name="history">Riwayat</string>
    <string name="top_up">Top Up</string>
    <string name="pulsa">Pulsa</string>
    <string name="pulsa_prabayar">Prabayar</string>
    <string name="pulsa_pascabayar">Pascabayar</string>
    <string name="listrik_air">Listrik dan Air</string>
    <string name="tagihan_pln">Tagihan PLN</string>
    <string name="token_pln">Token PLN</string>
    <string name="lainnya">Lainnya</string>
    <string name="bpjs">BPJS</string>
    <string name="pdam">PDAM</string>
    <string name="nomor_hp">Nomor HP</string>
    <string name="contact">contact</string>
    <string name="tab_pulsa_1">Prabayar</string>
    <string name="tab_pulsa_2">Pascabayar</string>
    <string name="tab_pulsa_3">Paket Data</string>
    <string name="pilih_jumlah_pulsa">Pilih jumlah pulsa</string>
    <string name="nomor_penerima">Nomor penerima</string>
    <string name="rincian_pembelian">Rincian Pembelian</string>
    <string name="pajak">Pajak</string>
    <string name="total">Total</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="bayar">Bayar</string>
    <string name="pilih_metode_pembayaran">Pilih metode pembayaran</string>
    <string name="tab_listrik_1">Tagihan</string>
    <string name="tab_listrik_2">Token</string>
    <string name="tab_listrik_3">PDAM</string>
    <string name="id_pelanggan">ID Pelanggan</string>
    <string name="rincian_pembayaran">Rincian pembayaran</string>
    <string name="dummy_id_pelanggan">34634252453459</string>
    <string name="dummy_nama">Sarah</string>
    <string name="name">Nama</string>
    <string name="dummy_total_lembar">1</string>
    <string name="total_lembar_tagihan">Total lembar tagihan</string>
    <string name="dummy_bulan_tahun">Juli, 2023</string>
    <string name="bulan_tahun">Bulan, tahun</string>
    <string name="total_pembayaran">Total pembayaran</string>
    <string name="jumlah_iuran">Jumlah iuran</string>
    <string name="dummy_jumlah_iuran">Rp. 120.000,00</string>
    <string name="biaya_admin">Biaya admin</string>
    <string name="dummy_biaya_admin">Rp. 2.500,00</string>
    <string name="dummy_total">Rp. 122.500,00</string>
    <string name="tab_bpjs_1">Kesehatan</string>
    <string name="tab_bpjs_2">Ketenagakerjaan</string>
    <string name="pilih_bulan">Pilih bulan</string>
    <string name="kesehatan">Kesehatan</string>
    <string name="ketenagakerjaan">Ketenaga-\nkerjaan</string>
    <string name="nomor_va">Nomor va</string>
    <string name="id_transaksi">ID transaksi</string>
    <string name="total_peserta">Total peserta</string>
    <string name="nomor_seri_dummy">32345123345312</string>
    <string name="cari_tvcc_yang_kamu_mau">Cari TVCC yang kamu mau</string>
    <string name="kategori">Kategori</string>
    <string name="rekomendasi_tvcc">Rekomendasi TVCC</string>
    <string name="title_of_content">Title of content</string>
    <string name="popular_now">Popular now</string>
    <string name="daftar">Daftar</string>
    <string name="masuk_sebagai_tamu">Masuk sebagai tamu</string>
    <string name="selamat_datang_login">Selamat datang! Silahkan isi data di bawah untuk dapat masuk ke akun Anda</string>
    <string name="google">Google</string>
    <string name="belum_mempunyai_akun">Belum mempunyai akun?</string>
    <string name="password_confirm_wrong">*Kata sandi berbeda dengan sebelumnya</string>
    <string name="username_invalid">*Username yang Anda masukkan sudah dipakai</string>
    <string name="name_invalid">*Nama yang Anda masukkan tidak boleh kosong</string>
    <string name="email_invalid">*Format mail yang Anda masukkan tidak sesuai</string>
    <string name="email_empty">*Email yang Anda masukkan tidak boleh kosong</string>
    <string name="email_used">*Email sudah digunakan orang lain</string>
    <string name="description_signup_page">Selamat datang! Silahkan mengisi formulir berikut untuk membuat akun.</string>
    <string name="otp_wrong">*Kode OTP yang Anda masukkan tidak valid</string>
    <string name="complete_profile_title">Lengkapi Data Diri</string>
    <string name="complete_profile_desc">Selamat datang! Isi detail informasi dirimu sekarang</string>
    <string name="complete_profile_referal_code">Kode Referral</string>
    <string name="pilih_wilayah_desc">Selamat datang! Silakan isi wilayah tempat Anda berada!</string>
    <string name="pusat_bantuan_title">Pusat Bantuan</string>
    <string name="pusat_bantuan_desc">Pertanyaan umum tentang INIDESAKU</string>
    <string name="form_bantuan_desc">Silahkan isi formulir dibawah ini!</string>
    <string name="choose_item">Pilih</string>
    <string name="form_bantuan_name">Nama Lengkap Anda</string>
    <string name="form_bantuan_email">Email Anda</string>
    <string name="form_bantuan_detail_pertanyaan">Detail Pertanyaan</string>
    <string name="kirim">Kirim</string>
    <string name="question_empty">*Masukkan pertanyaan.</string>
    <string name="kategori_lokasi">Kategori Lokasi</string>
    <string name="title_geotagging">Kontribusi Lokasi Penting dari Anda!</string>
    <string name="nama_lokasi_penting">Nama Lokasi Penting</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="save">Simpan</string>
    <string name="image_preview">Pratinjau Gambar</string>
    <string name="reupload_camera">Foto Ulang</string>
    <string name="apply_upload">Gunakan Foto</string>
    <string name="password_wrong">Kata sandi yang Anda masukan kurang dari 6 karakter</string>
    <string name="email_wrong">Email yang Anda masukan tidak valid</string>
    <string name="sedang_tayang">Sedang Tayang</string>
    <string name="populer_sekarang">Populer sekarang</string>
    <string name="semua">Semua</string>
    <string name="village_search">Mau lihat desa lain?</string>
    <string name="village_address">Alamat desa</string>
    <string name="title_activity_pesona_desa">PesonaDesaActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="berita_desa">Berita Desa</string>
    <string name="potensi_desa">Potensi Desa</string>
    <string name="budaya_lokal">Budaya Lokal</string>
    <string name="wisata_desa">Wisata Desa</string>
    <string name="cari_berita_desa">Cari Berita Desa</string>
    <string name="nama_berita">Nama Berita</string>
    <string name="informasi_desa">Informasi Desa</string>
    <string name="kode_wilayah">Kode Wilayah 32.12.14.2005</string>
    <string name="nama_profil_desa">Desa.Gelarmendala</string>
    <string name="nama_potensi">Nama Potensi</string>
    <string name="value">Value :</string>
    <string name="value_potensi">0.0</string>
    <string name="tahun">Tahun :</string>
    <string name="tahun_potensi">2018</string>
</resources>