<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/profileDesa"
        android:icon="@drawable/building_icon"
        android:title="@string/profile_desa"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/geo"
        android:icon="@drawable/maps_icon"
        android:title="@string/geospasial"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/beranda"
        android:icon="@drawable/home_icon"
        android:title="@string/beranda"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/ppob"
        android:icon="@drawable/ppob_icon"
        android:title="@string/ppob"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/profile_icon"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />

</menu>