<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.Material3.BottomSheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_rounded_top_white_bg"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/drag_handle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:paddingVertical="24dp">

        <TextView
            android:id="@+id/tvRincianPembelian"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rincian_pembelian"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvIdPelanggan"
            style="@style/Theme.IniDesakuBeta.Text.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/id_pelanggan"
            app:layout_constraintEnd_toStartOf="@id/tvIdPelangganValue"
            app:layout_constraintStart_toStartOf="@id/tvRincianPembelian"
            app:layout_constraintTop_toBottomOf="@id/tvRincianPembelian" />

        <TextView
            android:id="@+id/tvIdPelangganValue"
            style="@style/Theme.IniDesakuBeta.Text.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_id_pelanggan"
            app:layout_constraintEnd_toEndOf="@id/tvRincianPembelian"
            app:layout_constraintTop_toTopOf="@id/tvIdPelanggan" />

        <TextView
            android:id="@+id/tvNama"
            style="@style/Theme.IniDesakuBeta.Text.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/name"
            app:layout_constraintEnd_toStartOf="@id/tvNamaValue"
            app:layout_constraintStart_toStartOf="@id/tvIdPelanggan"
            app:layout_constraintTop_toBottomOf="@id/tvIdPelanggan" />

        <TextView
            android:id="@+id/tvNamaValue"
            style="@style/Theme.IniDesakuBeta.Text.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_nama"
            app:layout_constraintEnd_toEndOf="@id/tvIdPelangganValue"
            app:layout_constraintTop_toTopOf="@id/tvNama" />

        <TextView
            android:id="@+id/tvTotalLembar"
            style="@style/Theme.IniDesakuBeta.Text.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/total_lembar_tagihan"
            app:layout_constraintEnd_toStartOf="@id/tvTotalLembarValue"
            app:layout_constraintStart_toStartOf="@id/tvNama"
            app:layout_constraintTop_toBottomOf="@id/tvNama" />

        <TextView
            android:id="@+id/tvTotalLembarValue"
            style="@style/Theme.IniDesakuBeta.Text.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_total_lembar"
            app:layout_constraintEnd_toEndOf="@id/tvNamaValue"
            app:layout_constraintTop_toTopOf="@id/tvTotalLembar" />

        <TextView
            android:id="@+id/tvBulanTahun"
            style="@style/Theme.IniDesakuBeta.Text.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/bulan_tahun"
            app:layout_constraintEnd_toStartOf="@id/tvBulanTahunValue"
            app:layout_constraintStart_toStartOf="@id/tvTotalLembar"
            app:layout_constraintTop_toBottomOf="@id/tvTotalLembar" />

        <TextView
            android:id="@+id/tvBulanTahunValue"
            style="@style/Theme.IniDesakuBeta.Text.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_bulan_tahun"
            app:layout_constraintEnd_toEndOf="@id/tvTotalLembarValue"
            app:layout_constraintTop_toTopOf="@id/tvBulanTahun" />

        <TextView
            android:id="@+id/tvTotalPembayaran"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/total_pembayaran"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@id/tvBulanTahunValue"
            app:layout_constraintStart_toStartOf="@id/tvBulanTahun"
            app:layout_constraintTop_toBottomOf="@id/tvBulanTahun" />

        <TextView
            android:id="@+id/tvJumlahIuran"
            style="@style/Theme.IniDesakuBeta.Text.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/jumlah_iuran"
            app:layout_constraintEnd_toStartOf="@id/tvJumlahIuranValue"
            app:layout_constraintStart_toStartOf="@id/tvTotalPembayaran"
            app:layout_constraintTop_toBottomOf="@id/tvTotalPembayaran" />

        <TextView
            android:id="@+id/tvJumlahIuranValue"
            style="@style/Theme.IniDesakuBeta.Text.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_jumlah_iuran"
            app:layout_constraintEnd_toEndOf="@id/tvTotalPembayaran"
            app:layout_constraintTop_toTopOf="@id/tvJumlahIuran" />

        <TextView
            android:id="@+id/tvBiayaAdmin"
            style="@style/Theme.IniDesakuBeta.Text.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/biaya_admin"
            app:layout_constraintEnd_toStartOf="@id/tvBiayaAdminValue"
            app:layout_constraintStart_toStartOf="@id/tvJumlahIuran"
            app:layout_constraintTop_toBottomOf="@id/tvJumlahIuran" />

        <TextView
            android:id="@+id/tvBiayaAdminValue"
            style="@style/Theme.IniDesakuBeta.Text.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_biaya_admin"
            app:layout_constraintEnd_toEndOf="@id/tvJumlahIuranValue"
            app:layout_constraintTop_toTopOf="@id/tvBiayaAdmin" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/totalDivider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvBiayaAdmin"
            app:layout_constraintStart_toStartOf="@id/tvBiayaAdmin"
            app:layout_constraintEnd_toEndOf="@id/tvBiayaAdminValue"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/tvTotal"
            style="@style/Theme.IniDesakuBeta.Text.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/total"
            app:layout_constraintEnd_toStartOf="@id/tvTotalValue"
            app:layout_constraintStart_toStartOf="@id/totalDivider"
            app:layout_constraintTop_toBottomOf="@id/totalDivider" />

        <TextView
            android:id="@+id/tvTotalValue"
            style="@style/Theme.IniDesakuBeta.Text.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_total"
            app:layout_constraintEnd_toEndOf="@id/tvBiayaAdminValue"
            app:layout_constraintTop_toTopOf="@id/tvTotal" />

        <TextView
            android:id="@+id/tvMetodePembayaran"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/metode_pembayaran"
            app:layout_constraintEnd_toEndOf="@id/tvTotalValue"
            app:layout_constraintStart_toStartOf="@id/tvTotal"
            app:layout_constraintTop_toBottomOf="@id/tvTotal" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bankLayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/pilih_metode_pembayaran"
            app:layout_constraintEnd_toEndOf="@id/tvMetodePembayaran"
            app:layout_constraintStart_toStartOf="@id/tvMetodePembayaran"
            app:layout_constraintTop_toBottomOf="@id/tvMetodePembayaran">

            <AutoCompleteTextView
                android:id="@+id/bankSpin"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                app:simpleItems="@array/bank_items" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBayar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:enabled="false"
            android:text="@string/bayar"
            android:textAllCaps="false"
            app:cornerRadius="4dp"
            app:layout_constraintEnd_toEndOf="@id/bankLayout"
            app:layout_constraintStart_toStartOf="@id/bankLayout"
            app:layout_constraintTop_toBottomOf="@id/bankLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>