<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".ui.sign.signUp.SignUpFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTitleSignUp"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pendaftaran_akun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvCaptionSignUp"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/description_onboarding_1"
        app:layout_constraintEnd_toEndOf="@id/tvTitleSignUp"
        app:layout_constraintStart_toStartOf="@id/tvTitleSignUp"
        app:layout_constraintTop_toBottomOf="@id/tvTitleSignUp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutLogin"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="@id/tvCaptionSignUp"
        app:layout_constraintStart_toStartOf="@id/tvCaptionSignUp"
        app:layout_constraintTop_toBottomOf="@id/tvCaptionSignUp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutUsername"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/username"
        app:layout_constraintEnd_toEndOf="@id/layoutLogin"
        app:layout_constraintStart_toStartOf="@id/layoutLogin"
        app:layout_constraintTop_toBottomOf="@id/layoutLogin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPassword"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/kata_sandi"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@id/layoutUsername"
        app:layout_constraintStart_toStartOf="@id/layoutUsername"
        app:layout_constraintTop_toBottomOf="@id/layoutUsername">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sudah_mempunya_akun"
        app:layout_constraintStart_toStartOf="@id/layoutPassword"
        app:layout_constraintTop_toBottomOf="@id/layoutPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLoginPage"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/masuk"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="@id/tvHaveAccount"
        app:layout_constraintStart_toEndOf="@id/tvHaveAccount"
        app:layout_constraintTop_toTopOf="@id/tvHaveAccount" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selanjutnya"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="0dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>